# nanoswarm-secure-ctrl

./: Cargo.toml  LICENSE  README.md
config/: ndm_thresholds.aln
docs/architecture/: overview.md
src/: lib.rs
src/audit/: mod.rs
src/capabilities/: mod.rs
src/controller/: mod.rs
src/freeze/: mod.rs
src/monitor/: mod.rs
src/whitelist/: mod.rs
tests/: integration_tests.rs
