[package]
name = "nanoswarm-secure-ctrl"
version = "1.0.0"
edition = "2021"
authors = ["ALN Sovereign Stack Contributors"]
description = "Hardened Nanoswarm control interface with NDM integration and non-weaponization enforcement"
license = "ASL-1.0"
repository = "https://github.com/aln-sovereign/nanoswarm-secure-ctrl"
documentation = "https://docs.rs/nanoswarm-secure-ctrl"
keywords = ["aln", "nanoswarm", "security", "ndm", "non-weapon"]
categories = ["cryptography", "security", "embedded"]

[dependencies]
aln-syntax-core = { version = "1.0", path = "../aln-syntax-core" }
sovereigntycore = { version = "1.0", path = "../sovereigntycore" }
zes-crypto-lib = { version = "1.0", path = "../zes-crypto-lib" }
row-rpm-ledger = { version = "1.0", path = "../row-rpm-ledger" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
hex = "0.4"
sha3 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.10"
parking_lot = "0.12"
crossbeam-channel = "0.5"
tokio = { version = "1.0", features = ["full"], optional = true }

[dev-dependencies]
criterion = "0.5"
proptest = "1.0"
tempfile = "3.0"
serial_test = "2.0"
tokio-test = "0.4"

[lib]
name = "nanoswarm_secure_ctrl"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "nanoswarm-ctrl"
path = "src/bin/cli.rs"

[[bin]]
name = "nanoswarm-monitor"
path = "src/bin/monitor_daemon.rs"

[[bench]]
name = "command_latency"
harness = false

[features]
default = ["std", "ndm-integration", "audit-logging"]
std = []
full-ndm-integration = ["ndm-integration", "tokio"]
ndm-integration = []
audit-logging = []
offline-mode = []
multi-sig = []
ffi-bindings = []

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "issue_swarm_command"
path = "examples/issue_command.rs"

[lints.clippy]
all = "deny"
pedantic = "warn"
unsafe_code = "deny"
